fixed genres scoll on meduium screens and cast screen on mobile screens

--- a/src/index.css
+++ b/src/index.css
@@ -43,7 +43,7 @@ p {
 }
 
 .movie-info__button {
-  @apply w-[9rem] py-2 px-4 rounded bg-bg-secondary dark:bg-bg-secondary-dark hover:bg-bg-secondary-dark/10 dark:hover:bg-bg-secondary/50;
+  @apply w-full sm:w-[9rem] py-2 px-4 rounded bg-bg-secondary dark:bg-bg-secondary-dark hover:bg-bg-secondary-dark/10 dark:hover:bg-bg-secondary/50;
 }
 .search-bar {
   @apply bg-bg-secondary text-sm rounded-3xl w-full h-10 indent-2 outline outline-none outline-1 focus:outline-primary p-2.5 dark:bg-bg-secondary-dark;
